--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -214,7 +214,7 @@
                             <h5>Flipkart Clone</h5>
                             <p>This flipkart clone is made using html and css only as a first timer project.By making this project,I learn to use flexbox, Seo Optimization and to make website responsive while the devices changes like when website opened in phones or similar devices other than pc or laptops.</p>
 
-                            <a href="#" class="bx bx-link-external" style="color: aliceblue;"></a>
+                            <a href="https://github.com/RudraBanerjee/Flipkart_clone" class="bx bx-link-external" style="color: aliceblue;"></a>
                         </div>
                     </div>
                     <div class="row">
@@ -223,7 +223,7 @@
                             <h5>Calculator Website</h5>
                             <p>I have created a calculator website using html,Css and Js.I have the implemnted simple arithmetic operations and used add Event listener.It not has a button for deleting one digit at a time but also has a button for clear all.</p>
 
-                            <a href="#" class="bx bx-link-external" style="color: aliceblue;"></a>
+                            <a href="https://github.com/RudraBanerjee/INTERN-WINGS/tree/main/Calculator" class="bx bx-link-external" style="color: aliceblue;"></a>
                         </div>
                     </div>
                     <div class="row">
@@ -232,7 +232,7 @@
                             <h5>Blogging Website</h5>
                             <p>I have mainly used html,css and js for the frontend part and have used django framework of python to set up the backend part.THis project has facilities of login,sigup,logout,creating blogs,searching blogs as per catagory as well as title</p>
 
-                            <a href="#" class="bx bx-link-external" style="color: aliceblue;"></a>
+                            <a href="https://github.com/RudraBanerjee/INTERN-WINGS/tree/main/blogproject" class="bx bx-link-external" style="color: aliceblue;"></a>
                         </div>
                     </div>
                 </div>
